Added db_url env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - 80:8888
     links:
       - mongodb
+    environment:
+      db_url: "mongodb://mongodb/hysoft"
 
   mongodb:
     build: ./mongodb
