--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   webapp:
-    image: hysoftware/webapp
+    image: hysoftware/hysoftware.net:0.0.9
     ports:
       - 80:8888
     links:
@@ -12,7 +12,7 @@ services:
       address: "[::]:8888"
 
   mongodb:
-    build: ./mongodb
+    image: hysoftware/mongodb:1.0.0
     volumes:
       - "db:/db"
     expose:
